unpackaged/main/default/objects/ffct__BundleJob__c/fields/ffct__Error__c.field-meta.xml
<CustomField>
    <fullName>ffct__Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>