unpackaged/main/default/objects/ffct__BundleJob__c/fields/ffct__SignupEmail__c.field-meta.xml
<CustomField>
    <fullName>ffct__SignupEmail__c</fullName>
    <label>Signup Email</label>
    <type>Email</type>
</CustomField>