unpackaged/main/default/objects/ffct__BundleJob__c/fields/ffct__State__c.field-meta.xml
<CustomField>
    <fullName>ffct__State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIGNUPREQUEST_RECORD_CREATED</fullName>
            </value>
            <value>
                <fullName>ACCESS_TOKEN_IS_FETCHED</fullName>
            </value>
            <value>
                <fullName>CONSULTING_TOOLS_INSTALLATION_STARTED</fullName>
            </value>
            <value>
                <fullName>CONSULTING_TOOLS_INSTALLED</fullName>
            </value>
            <value>
                <fullName>IMPORT_PROCESS_STARTED</fullName>
            </value>
            <value>
                <fullName>IMPORT_PROCESS_COMPLETED</fullName>
            </value>
            <value>
                <fullName>IMPORT_PROCESS_COMPLETED_WITH_ERRORS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>