unpackaged/main/default/objects/ffct__BundleJob__c/fields/ffct__StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>ffct__StatusMessage__c</fullName>
    <label>Status Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>